fix alignment

--- a/src/sass/_structure.scss
+++ b/src/sass/_structure.scss
@@ -49,7 +49,7 @@ body {
   body {
   	width:93%;
   }
-  header, nav {
+  header {
   	width:100%;
   	float:left;
   	height:138px;
@@ -63,15 +63,18 @@ body {
     bottom: -15px;
   }
   
+
   .logo {
   	width:100%;
-  	height:33px;
+  	height:60px;
   	text-align:center;
   }
 
   nav {
   	ul {
   		padding-left: 0;
+      margin-top: 20px;
+
   	}
   	.nav-link {
   		text-align: center;
@@ -91,12 +94,20 @@ body {
   	font-size:1rem;
   }
 
+  .project {
+    width:90%;
+  }
+
   p {
   	line-height:1.5rem;
   }
   footer {
   	#contact {
+      font-size:1rem !important;
   		width:100%
   	}
+    ul {
+      margin-top:10px;
+    }
   }
 }
